--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0 auto;
 }
 
-.banner{
+/*.banner{
   width: 100px;
   height: 100px;
   border: 3px solid red;
@@ -32,10 +32,10 @@
     opacity: 1;
     background-image: url(../img/taylor_m5.jpg);
   }
-}
+}*/
 
 header.golfshop{
-  background-color: blue;
+  margin-bottom: 10px;
 
 }
 img.logo{
@@ -56,4 +56,31 @@ section.productos{
 
 .card{
   text-align: center;
+  margin-top: 15px;
+}
+
+footer {
+  margin-top: 15px;
+  height: 300px;
+  /*background-color: green;*/
+  overflow: hidden;
+  width: 90%;
+  border: 3px double green;
+  border-bottom-style: none;
+  border-left-style: none;
+  border-right-style: none;
+}
+.academia{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 50px;
+  border-radius: 5%;
+}
+.sinvineta1{
+  list-style: none;
+  float: right;
+  font-size: 30px;
+  line-height: 35px;
+  padding-top: 10px;
+  padding-right: 20px;
 }
