--- a/css/styleacad.css
+++ b/css/styleacad.css
@@ -42,57 +42,35 @@
 
 img.logo{
   display:block;
-  margin-left: auto;
-  margin-right: auto;
-}
+  }
 
 
-h1{
-  color: #0B6121;
-  text-align: center;
-  margin-top: 2%;
-}
 
-h3{
+h1, h3{
 margin-top: 30px;
-  color: #0B6121;
+  color: #0B0B61;
   font-family: sans-serif;
   text-align: center;
-}
-h1.academia{
-  color:#0B0B61;
-}
-h3.academia{
-  color:#0B0B61;
 }
 
 img.fotoacad{
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  height: 50%;
+  width: 40%;
+  height: 40%;
+
 }
 /*div img{
   width: 100%;
   margin: auto;
 }*/
-section.productos{
-  background-color: grey;
+div.fotos{
+  width: 100%;
+  float:left;
 }
-
 .body{
   overflow: hidden;
 }
-.productos{
-  float: left;
-}
 
-.card{
-  text-align: center;
-  margin-top: 15px;
-  float: left;
-}
 
 footer {
   margin-top: 15px;
@@ -105,12 +83,7 @@ footer {
   border-left-style: none;
   border-right-style: none;
 }
-.academia{
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 50px;
-  border-radius: 5%;
-}
+
 .sinvineta1{
   list-style: none;
   float: right;
