--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,11 @@ margin-top: 30px;
   font-family: sans-serif;
   text-align: center;
 }
+
+main {
+  padding-left: 25%;
+}
+
 h1.academia{
   color:#0B0B61;
 }
