--- a/css/style.css
+++ b/css/style.css
@@ -2,38 +2,6 @@
     margin: 0 auto;
 }
 
-/*.banner{
-  width: 100px;
-  height: 100px;
-  border: 3px solid red;
-  margin: auto;
-  background-size: 100% 100%;
-  animation: banner 15s infinite;
-  animation-direction: alternate;
-  background-color: white;
-}
-
-@keyframes banner{
-  0%, 30%{
-    background-image: url(../img/ping_driver.jpg);
-    opacity: 1;
-  }
-  31%, 34{
-  opacity: 0.1;
-  }
-  35%, 65%{
-    background-image: url(../img/ping_hierros.jpg);
-    opacity: 1;
-  }
-  66%, 69%{
-    opacity: 0.1;
-  }
-  70% 100%{
-    opacity: 1;
-    background-image: url(../img/taylor_m5.jpg);
-  }
-}*/
-
 .golfshop {
   margin-bottom: 2%;
 }
@@ -41,7 +9,6 @@
 .redes{
   text-align: center;
   margin-bottom: 2%;
-
 }
 
 img.logo{
@@ -50,8 +17,7 @@ img.logo{
   margin-right: auto;
 }
 
-
-h1{
+h1 {
   color: #0B6121;
   text-align: center;
   margin-top: 1%;
@@ -76,9 +42,13 @@ main {
 }
 
 .card {
-  border-color: #18EB8E;
-  border-radius: 10%;
-  border-style: dashed;
+  border-color: #GGG;
+  border-radius: 5%;
+  /*border-style:none;*/
+  border-bottom-style: solid;
+  border-bottom-width: thick;
+  border-left-width: thick;
+  text-align: center;
 }
 
 .card-img-top {
@@ -100,10 +70,6 @@ img.fotoacad{
   width: 50%;
   height: 50%;
 }
-/*div img{
-  width: 100%;
-  margin: auto;
-}*/
 
 section.productos{
   background-color: grey;
@@ -116,12 +82,6 @@ section.productos{
 .productos{
   float: left;
 }
-
-/*.card{
-  text-align: center;
-  margin-top: 15px;
-  float: left;
-}*/
 
 footer {
   margin-top: 15px;
