--- a/css/styleshierros.css
+++ b/css/styleshierros.css
@@ -1,3 +1,39 @@
 *{
     margin: 0 auto;
 }
+
+/*.container {
+  background-color: red;
+}*/
+
+
+.golfshop {
+  margin-bottom: 2%;
+  text-align: center;
+}
+
+.redes{
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+.containerbarra{
+  background-color: #F3F3F1;
+}
+
+.containertitulo {
+  color: #0B6121;
+  text-align: center;
+  margin-top: 1%;
+  font-family: comic;
+}
+
+.card-deck {
+  width: auto;
+  padding: 5%;
+  box-sizing: border-box;
+}
+
+.card {
+  border-left-style: solid;
+}
