--- a/css/styleacad.css
+++ b/css/styleacad.css
@@ -45,6 +45,13 @@ img.logo{
   }
 
 
+  main {
+  padding-left: 25%;
+  padding-bottom: 1%;
+  padding-top: 1%;
+  margin-top: 1%;
+  }
+
 
 h1, h3{
 margin-top: 30px;
@@ -71,6 +78,7 @@ div.fotos{
 }
 
 
+
 footer {
   margin-top: 15px;
   height: 300px;
@@ -83,6 +91,21 @@ footer {
   border-right-style: none;
 }
 
+.academia {
+  /*height: 45%;*/
+  width: 20%;
+/*  padding-left: 60px;*/
+margin-top: -4%;
+}
+
+.autor {
+    text-align: left;
+    color: #CFCBCB;
+    font-size: 10px;
+    margin-top: -5%;
+}
+
+
 .sinvineta1{
   list-style: none;
   float: right;
@@ -90,6 +113,11 @@ footer {
   line-height: 35px;
   padding-top: 10px;
   padding-right: 20px;
+}
+.volver1 {
+  float: right;
+  margin-right: 15%;
+  margin-top: 5%;
 }
 
 .list-group-item{
@@ -107,6 +135,9 @@ section{
   padding-top: 5%;
   float: right;
 }
+
+
+
 
 /*------media para aipads 768px------*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
