--- a/css/stylepreg.css
+++ b/css/stylepreg.css
@@ -45,6 +45,13 @@ img.logo{
   }
 
 
+  main {
+  padding-left: 25%;
+  padding-bottom: 1%;
+  padding-top: 1%;
+  margin-top: 1%;
+  }
+
 
 h1, h3{
 margin-top: 30px;
@@ -59,6 +66,10 @@ img.fotoacad{
   height: 40%;
 
 }
+
+
+
+
 /*div img{
   width: 100%;
   margin: auto;
@@ -188,6 +199,21 @@ footer {
   border-right-style: none;
 }
 
+.academia {
+  /*height: 45%;*/
+  width: 20%;
+/*  padding-left: 60px;*/
+margin-top: -4%;
+}
+
+.autor {
+    text-align: left;
+    color: #CFCBCB;
+    font-size: 10px;
+    margin-top: -5%;
+}
+
+
 .sinvineta1{
   list-style: none;
   float: right;
@@ -195,6 +221,11 @@ footer {
   line-height: 35px;
   padding-top: 10px;
   padding-right: 20px;
+}
+.volver1 {
+  float: right;
+  margin-right: 15%;
+  margin-top: 5%;
 }
 
 .list-group-item{
