--- a/css/styleshierros.css
+++ b/css/styleshierros.css
@@ -33,6 +33,13 @@
   font-family: arial sans-serif;
 }
 
+main {
+padding-left: 25%;
+padding-bottom: 1%;
+padding-top: 1%;
+margin-top: 1%;
+}
+
 .card-deck {
   width: auto;
   padding: 0.5%;
@@ -48,27 +55,61 @@
   height: 50%;
 }
 
-.academia {
-  height: 45%;
-  width: 45%;
-  padding-left: 60px;
+footer {
+  margin-top: 15px;
+  height: 300px;
+  /*background-color: green;*/
+  overflow: hidden;
+  width: 90%;
+  border: 3px double green;
+  border-bottom-style: none;
+  border-left-style: none;
+  border-right-style: none;
 }
+
+.academia {
+  /*height: 45%;*/
+  width: 20%;
+/*  padding-left: 60px;*/
+margin-top: -4%;
+}
+
+.autor {
+    text-align: left;
+    color: #CFCBCB;
+    font-size: 10px;
+    margin-top: -5%;
+}
+
 
 .sinvineta1{
   list-style: none;
   float: right;
-  font-size: 15px;
-  line-height: 120%;
-  padding-top: 2%;
-  padding-right: 50px;
+  font-size: 30px;
+  line-height: 35px;
+  padding-top: 10px;
+  padding-right: 20px;
+}
+.volver1 {
+  float: right;
+  margin-right: 15%;
+  margin-top: 5%;
 }
 
-footer {
-  height: 5%;
-  width: 100%;
+.list-group-item{
+  padding-top: 2%;
+  padding-bottom: 2%;
+  margin-top: 1%;
+  width: 50%;
+  height: 3%;
+}
+section{
   overflow: hidden;
-  border-top-style: solid;
-  border-top-color: #18EB8E;
+}
+
+.pago{
+  padding-top: 5%;
+  float: right;
 }
 
 /*------media para aipads 768px------*/
