un poco de estilo a login, putter corregido para que sea responsive
falta index hacer responsive
se agrega "INGRESA" en index para el login

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,19 @@
   margin-bottom: 2%;
 }
 
+.panel_login {
+  margin-top: -20%;
+}
+
+.hola {
+ border: solid;
+ background-color:#0B6121;
+ color: white;
+ text-align: center;
+font-family: comic
+}
+
+
 .redes{
   text-align: center;
   margin-bottom: 2%;
