--- a/css/stylesputters.css
+++ b/css/stylesputters.css
@@ -30,21 +30,24 @@
 
 .container {
   overflow: hidden;
-  padding-left: 7%;
+  /*padding-left: 7%;*/
 }
 
-
-main {
+.row {
+  margin-right: 1.5%;
+}
+/*main {
 padding-left: 25%;
 padding-bottom: 1%;
 padding-top: 1%;
 margin-top: 1%;
-}
+}*/
 
 
 .card {
   float: left;
   margin-left: 1%;
+  margin-top: 1%;
 }
 
 footer {
@@ -95,6 +98,7 @@ margin-top: -4%;
   width: 50%;
   height: 3%;
 }
+
 section{
   overflow: hidden;
 }
