--- a/css/style_login.css
+++ b/css/style_login.css
@@ -66,7 +66,19 @@ a{
 .validacion p{
   color: red;
 }
-
+.recordar{
+  display: flex !important;
+  flex-direction: row;
+  justify-content: center;
+}
+input[type="checkbox"]{
+  margin-right: 100px !important;
+  height: 20px;
+}
+.label{
+  display: flex !important;
+  margin-top: 120px !important;
+}
 input {
   display:block;
   margin-top: 2px;
